Done with text to speech

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
         <script src="car.js"></script>
         <!-- // <script src="motor_cycle.js"></script> -->
         <script src="my_car.js"></script>
+        <script src="score.js"></script>
         <script src="variables.js"></script>
         <!-- load my script that executes when jQuery gives us the 'webpage ready' event -->
         <script src="keyboard.js"></script>
         <script src="play.js"></script>
+        <script type="text/javascript" src="./speakClient.js"></script>
     </head>
 
     <body>
-
+    <div id="audio"></div>
     <h3 id="mine">Mine position: Left</h3>
     <h3 id="obs"></h3>
 
