Done with complexity1

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <script src="jquery-2.0.3.min.js"></script>
         
         <script src="howler.min.js"></script>
-        <script src="background.js"></script>
+        <script src="background.js"></script><!--these arre clases till score.js-->
         <script src="blast.js"></script>
         <script src="car.js"></script>
         <!-- // <script src="motor_cycle.js"></script> -->
         <script src="my_car.js"></script>
         <script src="score.js"></script>
-        <script src="variables.js"></script>
+        <script src="variables.js"></script><!--creates instances-->
         <!-- load my script that executes when jQuery gives us the 'webpage ready' event -->
-        <script src="keyboard.js"></script>
+        <script src="keyboard.js"></script><!--gives ke  positions-->
         <script src="play.js"></script>
         <script type="text/javascript" src="./speakClient.js"></script>
     </head>
